syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto
package pb;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message NodeInfo {

    message ProtocolVersion {
        uint64 p2p = 3;
        uint64 block = 1;
        uint64 app = 2;
    }

    ProtocolVersion protocol_version = 8;
    string id = 1;
    string listen_addr = 2;
    string network = 3;
    string version = 4;
    string channels = 5;
    string moniker = 6;

    message Other {
        string tx_index = 2;
        string rpc_address = 1;
    }

    Other other = 7;
}

message NetInfoResponse {
    bool listening = 4;
    repeated string listeners = 1;
    int64 n_peers = 2;

    message Peer {

        NodeInfo node_info = 4;

        bool is_outbound = 1;

        message ConnectionStatus {
            int64 Duration = 4;

            message Monitor {
                bool Active = 13;
                string Start = 1;
                int64 Duration = 2;
                int64 Idle = 3;
                int64 Bytes = 4;
                int64 Samples = 5;
                int64 InstRate = 6;
                int64 CurRate = 7;
                int64 AvgRate = 8;
                int64 PeakRate = 9;
                int64 BytesRem = 10;
                int64 TimeRem = 11;
                uint32 Progress = 12;
            }

            Monitor SendMonitor = 1;

            Monitor RecvMonitor = 2;

            message Channel {
                int32 ID = 5;
                int64 SendQueueCapacity = 1;
                int64 SendQueueSize = 2;
                int64 Priority = 3;
                int64 RecentlySent = 4;
            }

            repeated Channel Channels = 3;
        }

        ConnectionStatus connection_status = 2;
        string remote_ip = 3;
    }

    repeated Peer peers = 3;
}

message StatusResponse {
    string version = 7;
    string latest_block_hash = 1;
    string latest_app_hash = 2;
    int64 latest_block_height = 3;
    string latest_block_time = 4;
    int64 keep_last_states = 5;

    message TmStatus {

        NodeInfo node_info = 3;

        message SyncInfo {
            string latest_block_hash = 5;
            string latest_app_hash = 1;
            int64 latest_block_height = 2;
            string latest_block_time = 3;
            bool catching_up = 4;
        }

        SyncInfo sync_info = 1;

        message ValidatorInfo {
            string address = 3;

            message PubKey {
                string type = 2;
                string value = 1;
            }

            PubKey pub_key = 1;
            int64 voting_power = 2;
        }

        ValidatorInfo validator_info = 2;
    }

    TmStatus tm_status = 6;
}

message PruneBlocksRequest {
    int64 from_height = 1;
    int64 to_height = 2;
}

message DealPeerRequest {
    string address = 1;
    bool persistent = 2;
}

message DashboardResponse {
    int64 latest_height = 1;
    google.protobuf.Timestamp timestamp = 2;
    int64 duration = 3;
    uint64 memory_usage = 4;
    string validator_pub_key = 5;
    int64 max_peer_height = 6;
    int32 peers_count = 7;
    int64 avg_block_processing_time = 8;
    int64 time_per_block = 9;
    string missed_blocks = 10;
    int64 voting_power = 11;
    string stake = 12;
    enum ValidatorStatus {
        Validating = 0;
        Challenger = 1;
        Offline = 2;
        NotDeclared = 3;
    }
    ValidatorStatus validator_status = 13;
}

service ManagerService {
    rpc Status (google.protobuf.Empty) returns (StatusResponse);
    rpc NetInfo (google.protobuf.Empty) returns (NetInfoResponse);
    rpc PruneBlocks (PruneBlocksRequest) returns (google.protobuf.Empty);
    rpc DealPeer (DealPeerRequest) returns (google.protobuf.Empty);
    rpc Dashboard (google.protobuf.Empty) returns (stream DashboardResponse);
}
